k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: move-tech-orders-api
  namespace: move-tech-api
  labels:
    app: move-tech-orders-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: move-tech-orders-api
  template:
    metadata:
      labels:
        app: move-tech-orders-api
    spec:
      imagePullSecrets:
        - name: mgc-registry-secret
      containers:
      - name: move-tech-orders-api
        image: container-registry.br-se1.magalu.cloud/crgithub/move-tech-orders-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
