k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: move-tech-orders-api-service
  namespace: move-tech-api
spec:
  type: ClusterIP
  selector:
    app: move-tech-orders-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
